# feature_flags_service

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  openapi.yaml
src/: database.rs  main.rs  utils.rs
src/adapters/repositories/: environment_repository.rs  feature_flags_repository.rs  mod.rs
src/domain/: models.rs
src/resources/: client_api.rs  environments_api.rs  feature_flags_api.rs  mod.rs
src/services/: environment_handlers.rs  feature_flag_handlers.rs  mod.rs
