[package]
name = "feature_flags_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
dotenv = "0.15.0"
async-std = "1.12.0"
futures = "0.3.25"
async-trait = "0.1.58"
derive_more = "0.99.17"
thiserror = "1.0.37"

[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["async-std-runtime"]
